# hermes-discord-channel-access-plugin

./: README.md  pyproject.toml
discord_channel_access/: __init__.py  plugin.yaml  schemas.py  tools.py
tests/: conftest.py  test_discord_channel_access_plugin.py
